--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "cypress": "^10.2.0",
     "cypress-dotenv": "^2.0.0",
     "dotenv": "^16.0.1",
-    "pretty": "^2.0.0"
+    "pretty": "^2.0.0",
+    "puppeteer": "^15.1.0"
   },
   "devDependencies": {
     "@faker-js/faker": "^7.3.0",
