progress for 3d secure authorization

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,9 @@
-MAIN_URL=https://stripe-samples.github.io/
+MAIN_URL=https://stripe-samples.github.io/github-pages-stripe-checkout/
 PAYMENT_URL=https://checkout.stripe.com/
-3D_SECURE_CARD=4242 4242 4242 4242
-NON_3D_SECURE_CARD=4000 0000 0000 3220
+3D_SECURE_CARD=4000 0000 0000 3220
+NON_3D_SECURE_CARD=4242 4242 4242 4242
+API_MAIN_URL=https://api.stripe.com/v1/
+
+# M1 Mac user please put your chrome executable path here before Yarn Install, also uncomment skip chromium download var
+PUPPETEER_EXECUTABLE_PATH=/Applications/Google\ Chrome.app/Contents/MacOS/Google\ Chrome
+PUPPETEER_SKIP_CHROMIUM_DOWNLOAD=true
