--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "cypress": "^10.2.0",
     "cypress-dotenv": "^2.0.0",
+    "cypress-iframe": "^1.0.1",
     "dotenv": "^16.0.1",
     "pretty": "^2.0.0",
     "puppeteer": "^15.1.0"
