--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "**Welcome to Oddle Challenge**",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test-run": "cypress run",
+    "test-open": "cypress open"
   },
   "repository": {
     "type": "git",
@@ -28,6 +29,10 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^7.3.0",
+    "cypress-mochawesome-reporter": "^3.2.0",
+    "cypress-multi-reporters": "^1.6.1",
+    "mocha": "^10.0.0",
+    "mochawesome": "^7.1.3",
     "typescript": "^4.7.4"
   }
 }
